bad/assign_field_class_arr_elem_class_down.example_compiler_output
ERROR
[1mbad/assign_field_class_arr_elem_class_down.lat:9:20: [1;31merror: [0;1massigning to `Y` from incompatible type `X`[m
	(new C[1])[2].fld = new X;
	                  [1;32m^[m
